# sahmino

./: .pre-commit-config.yaml  README.md  manage.py  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
core/: admin.py  models.py  serilizers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_item_status_alter_item_done_by_alter_item_type.py
docs/: README.md
sahmino/: asgi.py  settings.py  urls.py  wsgi.py
