[tool.poetry]
name = "sahmino"
version = "0.1.0"
description = "Backend for Sahmino (Django REST API)"
authors = ["Ali Arefi <aliarefi@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
djangorestframework = "^3.15"
drf-yasg = "^1.21"
drf-spectacular = "^0.28"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-django = "^4.5"
black = "^24.3"
isort = "^5.12"
mypy = "^1.7"

[tool.poetry.scripts]
# no CLI scripts for now

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
